--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="search">Search</string>
-    <string name="search_condition">Please enter 3 or more characters..</string>
-    <string name="search_hint">Search here</string>
+    <string name="search_hint">Enter 3 or more characters ...</string>
+    <string name="no_text">No</string>
+    <string name="yes_text">Yes</string>
+    <string name="exit_app">Exit App</string>
+    <string name="exit_msg">Are you sure to exit app..</string>
 </resources>
